--- a/src/assets/user/scss/category-page.scss
+++ b/src/assets/user/scss/category-page.scss
@@ -78,25 +78,25 @@
 
     .product__item {
         margin-bottom: 30px;
+        display: flex;
+        align-items: flex-start;
+        column-gap: 30px;
+
+        .product__item__image {
+            width: 100%;
+            height: 200px;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                border-radius: 8px;
+            }
+        }
 
         a {
-            display: flex;
-            align-items: flex-start;
-            text-decoration: none;
-            column-gap: 30px;
             color: map-get($map: $theme-colors, $key: "black");
-
-            .product__item__image {
-                width: 100%;
-                height: 200px;
-    
-                img {
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                    border-radius: 8px;
-                }
-            }
+            text-decoration: none;
 
             .product__item__info {
                 .product__item__category-name {
@@ -194,6 +194,7 @@
         }
 
         .product__item__image {
+            position: relative;
             width: 100%;
             height: 200px;
 
@@ -202,6 +203,40 @@
                 height: 100%;
                 object-fit: cover;
                 border-radius: 8px;
+            }
+
+            &:hover .product__item__icons {
+                bottom: 20px;
+                opacity: 1;
+                visibility: visible;
+            }
+        }
+
+        .product__item__icons {
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            gap: 10px;
+            transition: bottom 0.3s ease;
+            bottom: -40px;
+            transition: bottom 0.3s ease, opacity 0.3s ease, visibility 0.3s ease;
+            opacity: 0;
+            visibility: hidden;
+
+            svg {
+                width: 40px;
+                height: 40px;
+                padding: 10px;
+                border-radius: 5px;
+                background-color: map-get($map: $theme-colors, $key: "main");
+                color: map-get($map: $theme-colors, $key: "white");
+
+                &:hover {
+                    background-color: map-get($map: $theme-colors, $key: "white");
+                    color: map-get($map: $theme-colors, $key: "main");
+                    transition: map-get($map: $theme-transitions, $key: "other");
+                }
             }
         }
     }
