--- a/src/assets/user/scss/home-page.scss
+++ b/src/assets/user/scss/home-page.scss
@@ -394,7 +394,7 @@
                 font-weight: 600;
                 opacity: 0;
                 transition: opacity 0.3s ease-in-out;
-                z-index: 2; 
+                z-index: 2;
             }
 
             &:before {
@@ -1013,6 +1013,11 @@
     text-transform: uppercase;
     font-size: 20px;
     margin-bottom: 30px;
+
+}
+
+.footer__description {
+    width: 260px;
 }
 
 .footer__description {
@@ -1022,7 +1027,7 @@
 .footer__time {
     display: flex;
     column-gap: 20px;
-    margin-top: 50px;
+    margin-top: 30px;
 
     a {
         background-color: map-get($map: $theme-colors, $key: "main");
