--- a/src/assets/user/scss/home-page.scss
+++ b/src/assets/user/scss/home-page.scss
@@ -559,6 +559,12 @@ a {
     overflow-y: auto;
     width: 100%;
     height: 150px;
+    margin: 10px 0;
+
+    &::-webkit-scrollbar {
+        width: 0px;
+        background-color: #ffffff;
+    }
 }
 
 .popup__cart__item {
@@ -575,10 +581,10 @@ a {
             height: 50px;
             object-fit: cover;
         }
-    
+
         .popup__cart__item__details {
             flex-grow: 1;
-    
+
             p {
                 @each $key, $value in map-get($theme-webkits, sub-title) {
                     #{$key}: #{$value};
@@ -624,6 +630,7 @@ a {
 
 .new__product {
     margin: 50px 0px;
+    margin-right: 40px;
 
     .new__product__title {
         font-size: 16px;
@@ -638,7 +645,7 @@ a {
 
     .new__product__description {
         margin: 20px 0;
-        font-size: 18px;
+        font-size: 20px;
 
         strong {
             color: map-get($map: $theme-colors, $key: "main");
@@ -774,7 +781,7 @@ a {
 
 .new__product__image-top {
     height: 300px;
-    margin: 10px 0;
+    margin-bottom: 15px;
 
     img {
         width: 100%;
