--- a/src/assets/user/scss/category-page.scss
+++ b/src/assets/user/scss/category-page.scss
@@ -83,7 +83,7 @@
         column-gap: 30px;
 
         .product__item__image {
-            width: 100%;
+            width: 280px;
             height: 200px;
 
             img {
