--- a/src/assets/user/scss/home-page.scss
+++ b/src/assets/user/scss/home-page.scss
@@ -972,7 +972,7 @@ a {
 
                 img {
                     width: 100%;
-                    height: 100%;
+                    // height: 100%;
                     border-radius: 8px;
                 }
             }
